[fix] map freezes on mobile view

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -117,6 +117,7 @@
 
 		.homeMapContainer {
 			width: 90%;
+			min-height: 500px;
 		}
 	}
 }
